# twitter

src/: db.sqlite3  pyproject.toml
src/apps/accounts/: forms.py  urls.py  views.py
src/apps/accounts/templates/accounts/: logged_out.html  login.html  signup.html
src/apps/base/: views.py
src/apps/base/static/base/css/: global.css  home.css  login.css  logout.css
src/apps/base/templates/base/pages/: base.html
src/apps/base/templates/base/partials/: header.html
src/apps/tweets/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/tweets/migrations/: 0001_initial.py
src/apps/tweets/templates/tweets/pages/: home.html  tweet_form.html
src/setup/: settings.py  urls.py
