[project]
name = "src"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff]
line-length = 80
exclude =  ["./apps/**/migrations"]

[tool.ruff.format]
quote-style = "single"